# Intentional-Swaps

./: .gitignore  README.md  bitcoin.conf
icp/: App.jsx  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
icp/.cargo/: config.toml
icp/.config/dfx/: networks.json
icp/libs/client/src/: ed25519.rs
icp/src/intentswaps_backend/: Cargo.toml  intentswaps_backend.did
icp/src/intentswaps_backend/src/: README.md  bitcoin_integration.rs  lib.rs  orders.rs  solana_integration.rs  storage.rs  types.rs
icp/src/intentswaps_backend/src/basic_bitcoin/: common.rs  ecdsa.rs  mod.rs  ordinals.rs  p2pkh.rs  p2tr.rs  p2wpkh.rs  schnorr.rs
icp/src/intentswaps_backend/src/basic_bitcoin/service/: etch_rune.rs  get_balance.rs  get_block_headers.rs  get_current_fee_percentiles.rs  get_p2pkh_address.rs  get_p2tr_key_path_only_address.rs  get_p2tr_script_path_enabled_address.rs  get_p2wpkh_address.rs  get_utxos.rs  inscribe_brc20.rs  inscribe_ordinal.rs  send_from_p2pkh_address.rs  send_from_p2tr_key_path_only_address.rs  send_from_p2tr_script_path_enabled_address_key_spend.rs  send_from_p2tr_script_path_enabled_address_script_spend.rs  send_from_p2wpkh_address.rs
icp/src/intentswaps_backend/src/basic_solana/: ed25519.rs  mod.rs  solana_wallet.rs  state.rs
icp/src/intentswaps_frontend/: index.html  package.json  vite.config.js
icp/src/intentswaps_frontend/public/: .ic-assets.json5
icp/src/intentswaps_frontend/src/: App.css  App.jsx  index.scss  main.jsx  polyfills.js
resolver/: .env.example  README.md  check-btc-key.js  convert-solana-key.js  package-lock.json  package.json  server.js
