[package]
name = "intentswaps_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

getrandom = { version = "0.2", features = ["custom"] }

[dependencies]
bs58 = { workspace = true }
candid = { workspace = true }
# Transitive dependency
# See https://forum.dfinity.org/t/module-imports-function-wbindgen-describe-from-wbindgen-placeholder-that-is-not-exported-by-the-runtime/11545/8
getrandom = { workspace = true, default-features = false, features = ["custom"] }
ic-cdk = { workspace = true }
ic-ed25519 = { workspace = true }
num = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sol_rpc_client = { path = "../../libs/client", features = ["ed25519"] }
sol_rpc_types = { path = "../../libs/types" }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519"] }
solana-signature = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
solana-transaction = { workspace = true, features = ["bincode"] }
spl-associated-token-account-interface = { workspace = true }
ic-cdk-executor = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true }
ic-cdk-timers = { workspace = true }
md5 = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base58 = { workspace = true }
leb128 = { workspace = true }

[dev-dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-test-utilities-load-wasm = { workspace = true }
pocket-ic = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-rpc-client-nonce-utils = { workspace = true }
solana-signer = { workspace = true }